# LiOAvIZ-Lab10

./: CMakeLists.txt  README.md  Report10.docx  ~$port10.docx
include/adapters/: console_adapter.h
include/backend/: graph_gen.h
resources/config_files/: aliases.conf  graph_console.conf
src/: CMakeLists.txt  main.cpp
src/adapters/: console_adapter.cpp
src/backend/: graph_gen.cpp
